# sector

./: .gitignore  CNAME  Dockerfile  README.md  debug.html  deploy_vps.sh  docker-compose.yaml  index.html  pyproject.toml  requirements.txt
k8s/: kustomization.yaml
k8s/base/: api.yaml  bot-api-secret.yaml  bot-worker.yaml  frontend.yaml  ingress-api.yaml  ingress-frontend.yaml  ingress-viz.yaml  namespace.yaml  redis-config.yaml  redis.yaml  sim-worker.yaml  viz.yaml
k8s/ingress-nginx/: controller.yaml
scripts/: deploy_vps.sh
sector/: config.py  factions.py  puppet.py  state_utils.py  world.py
sector/config/: sim_config.json
sector/helper/: __init__.py  factions_helper.py  world_helpers.py
sector/infra/: redis_streams.py
sector/models/: __init__.py  frontend_config.py  redis_config.py  sim_config.py  world_config.py
services/api/: main.py
services/bot_worker/: puppetmaster.py
services/frontend_worker/: main.py
services/frontend_worker/static/: index.html
services/nft_minter/: Dockerfile  main.py  requirements.txt
services/sim_worker/: worker.py
services/viz_worker/: main.py  models.py
services/viz_worker/static/: index.html
