[project]
name = "sector"
version = "0.1.0"
description = "RS project - POC"
authors = [
    {name = "Josip Seketa",email = "jseketa@student.unipu.hr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "scipy (>=1.17.0,<2.0.0)"
]

[project.optional-dependencies]
dev = [
    "scipy-stubs"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]
